# learning_cmake

./: .gitignore  CMakeLists.txt  README.md
project/: CMakeLists.txt
project/inc/: subtract.h
project/src/: adder.c  subtract.c
